HTML: 컨텐츠 작성

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <!-- SEO -->
   <title>Deeping Sauce</title>
   <meta name="author" content="이소연" />
-  <meta name="description" content="음악 이야기를 들려주는 뉴스레터">
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <meta name="description" content="음악 큐레이션 뉴스레터 서비스. 음악을 깊게 음미하고 싶다면 꼭 곁들여 보세요.">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <!-- OG -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Deeping Sauce" />
-  <meta property="og:description" content="음악 이야기를 들려주는 뉴스레터" />
+  <meta property="og:description" content="음악 큐레이션 뉴스레터 서비스. 음악을 깊게 음미하고 싶다면 꼭 곁들여 보세요." />
   <meta property="og:url" content="" />
   <meta property="og:image" content="" />
   <!-- CSS -->
@@ -21,6 +21,271 @@
   <script defer type="module" src="./src/main.js"></script>
 </head>
 <body>
+  <header>
+    <h1>
+      <a href="">
+        Deeping Sauce
+      </a>
+    </h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#articles">Articles</a></li>
+        <li><a href="#comment">Comment Snack</a></li>
+        <li><a href="#goods">Goods</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Home -->
+    <section id="home">
+      <img src="./images/deeping-sauce.png" alt="">
+
+    </section>
+
+    <!-- About -->
+    <section id="about">
+      <h2>What is Deeping Sauce?</h2>
+      <p>🥫Dipping sauce(찍어 먹는 소스)도 아니고 Deeping sauce(깊은 소스)가 뭐야..?</p>
+      <p>
+        똑같은 음식이라도 다른 소스를 찍어 먹으면 전혀 다른 맛이 나곤 하잖아요.
+        소스의 그런 특징에서 영감을 얻었습니다.
+        찍어먹는 소스라는 뜻의 'Dipping Sauce' 라는 단어에 ‘깊다(deep)’라는 의미를 더한 DEEPING SAUCE로서
+        음악 역시 무엇을 보고, 읽으며 듣느냐에 따라 깊이가 달라진다는 의미를 담았어요.
+        지금부터 여러분들이 음악과 함께 곁들이기에 가장 좋은 소스가 되겠습니다.😊
+      </p>
+      <a href="https://page.stibee.com/subscriptions/64008" target="_blank">구독하기</a>
+    </section>
+
+    <!-- Articles -->
+    <section id="articles">
+      <h2>News Letter 다시 보기</h2>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>스무 번째</p>
+          <p>저희에요! 저희 디핑소스에요!</p>
+          <p>2021.01.17</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열여덟 번째</p>
+          <p>디핑소스 셰프 올림</p>
+          <p>2020.11.12</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열일곱 번째</p>
+          <p>세탁 맡긴 옷 찾아가세요</p>
+          <p>2020.11.5</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열여섯 번째</p>
+          <p>선글라스 벗으세요.</p>
+          <p>2020.10.29</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열다섯 번째</p>
+          <p>부끄러워요😚</p>
+          <p>2020.10.22</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열네 번째</p>
+          <p>자요? 자나보네...</p>
+          <p>2020.10.15</p>
+        </a>
+      </article>
+      <button>더 보기</button>
+      <!-- <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열세 번째</p>
+          <p>너무 혼란스러워요!</p>
+          <p>2020.10.8</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열두 번째</p>
+          <p>그럴 때도 있는거죠...</p>
+          <p>2020.09.24</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열한 번째</p>
+          <p>캔, 눈, 사랑이 모이면?</p>
+          <p>2020.09.17</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>열 번째</p>
+          <p>나..무시하는 거예요..?</p>
+          <p>2020.09.10</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>아홉 번째</p>
+          <p>이 시국에 비행이라뇨?</p>
+          <p>2020.09.03</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>여덟 번째</p>
+          <p>설에 뭐하시나요?</p>
+          <p>2020.08.27</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>일곱 번째</p>
+          <p>저의 구애를 받아주시겠습니까?</p>
+          <p>2020.08.20</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>여섯 번째</p>
+          <p>맞는 말만 하는 꼴통이신가요?</p>
+          <p>2020.08.13</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>다섯 번째</p>
+          <p>우리는 어쨰서 어른이 된 걸까?</p>
+          <p>2020.06.18</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="">
+          <p>네 번째</p>
+          <p>오늘을 살아내고, 우리 내일로 가자</p>
+          <p>2020.05.19</p>
+        </a>
+      </article> -->
+    </section>
+
+    <!-- Comment snack -->
+    <section id="comment">
+      <h2>Comment Snack</h2>
+      <ul>
+        <li><button>All</button></li>
+        <li><button>장르 1</button></li>
+        <li><button>장르 2</button></li>
+        <li><button>장르 3</button></li>
+        <li><button>장르 4</button></li>
+      </ul>
+      <!-- Slide -->
+      <div>
+        <h3>김사월</h3>
+        <img src="" alt="">
+        <div>
+          <button>Comments</button>
+          <ul>
+            <li>댓글</li>
+            <li>댓글</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <h3>뱃사공</h3>
+        <img src="" alt="">
+        <div>
+          <button>Comments</button>
+          <ul>
+            <li>댓글</li>
+            <li>댓글</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <h3>재달</h3>
+        <img src="" alt="">
+        <div>
+          <button>Comments</button>
+          <ul>
+            <li>댓글</li>
+            <li>댓글</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    
+    <!-- Goods -->
+    <section id="Goods">
+      <!-- Slide -->
+      <div>
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div>
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div>
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+      <div>
+        <a href="">
+          <img src="" alt="">
+        </a>
+      </div>
+    </section>
+  </main>
+
+  <!-- Contact -->
+  <footer id="contact">
+    <ul>
+      <li>
+        <a href="page.stibee.com/subscriptions/64008">구독하기</a>
+      </li>
+      <li>
+        Email
+        <a href="ndeepkorea@gmail.com"></a>
+      </li>
+      <li>
+        Instagram
+        <a href="https://www.instagram.com/deeping_sauce/?hl=ko">deeping_sauce</a>
+      </li>
+    </ul>
+    <a href="">구독하기</a>
+    <a href=""></a>
+  </footer>
   
+  <!-- Go to top -->
+  <button></button>
 </body>
 </html>
