--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/7c6ce2eb2a.js" crossorigin="anonymous"></script>
   <!-- Swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -38,7 +40,9 @@
         <img src="./images/logo.png" alt="Deeping Sauce Logo">
       </a>
     </h1>
-    <button class="toggle-menu" aria-label="menu toggle">+</button>
+    <button class="toggle-menu" aria-label="menu toggle">
+      <i class="fa-solid fa-plus"></i>
+    </button>
     <nav class="nav">
       <ul class="menu">
         <li class="menu-li"><a class="link on" href="#home">Home,</a></li>
