Home: 스크롤 시 투명하게 처리

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- JS -->
   <script defer type="module" src="./src/main.js"></script>
-  <script defer type="module" src="./src/active-menu.js"></script>
+  <script defer type="module" src="./src/header.js"></script>
   <script defer type="module" src="./src/swiper.js"></script>
 </head>
 <body>
